Feat: Completed GUI implementation